manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: devdocs
 namespace: nixlabs
spec:
 selector:
   matchLabels:
     app: devdocs
 template:
   metadata:
     labels:
       app: devdocs
   spec:
     containers:
       - name: devdocs
         image: ghcr.io/nixlabs-dev/devdocs:0707ca5ddae2118e1059aed1455d81cf9691bb0c
         ports:
           - name: web
             containerPort: 3000
     imagePullSecrets:
       - name: ghcr
