manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: devdocs
 namespace: nixlabs
spec:
 ports:
   - name: web
     port: 80
     targetPort: web
 selector:
   app: devdocs
